--- a/ios/QRCounter/Info.plist
+++ b/ios/QRCounter/Info.plist
@@ -20,6 +20,19 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>QRCode Counter</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>demo</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -35,8 +48,16 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>QRCode wants to use your camera</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>QRCode wants to use your microphone</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>QRCode wants to use your photo galary</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>QRCode wants to use your photo galary</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
