--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
+    "@types/react-redux": "^7.1.17",
     "@types/react-test-renderer": "^16.9.2",
     "@types/redux-logger": "^3.0.8",
     "babel-jest": "^26.6.3",
